fix checkmark icon ios

--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -1201,12 +1201,8 @@
 		float: left;
 		position: relative;
 		cursor: pointer;
-		-webkit-text-fill-color: #fff !important;
-		-webkit-user-select: none;
-		-moz-user-select: none;
-		-ms-user-select: none;
-		user-select: none;
-		
+		-webkit-text-fill-color: white !important;
+		-webkit-appearance: inherit;
 	}
 
 	input[type="checkbox"]:after {
@@ -1218,27 +1214,28 @@
 		cursor: pointer;
 		height: 28px;
 		width: 28px;
+		color: white !important;
 		left: 0;
 		top: 0;
 		font-size: 10px;
-		-webkit-box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
-		-moz-box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
-		box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
+		// -webkit-box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
+		// -moz-box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
+		// box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
 		background: #ad1e32;
-		border: 1px solid #003780;
+		border: 1px solid #258acf;
 	}
 
 	input[type="checkbox"]:checked:after {
-		content: "\2714";
-		color: #fff !important;
-		-webkit-text-fill-color: #fff !important;
+		// content: "url(../../release/image/page/contact/checkmark.png)";
+		content: url("https://ad-ruf.hipetest.com/wp-content/uploads/2021/12/checkmark_4.png");
+		color: white !important;
+		-webkit-text-fill-color: white !important;
+		// background: url(../../release/image/page/contact/checkmark_1.svg);
 		font-size: 25px;
-		padding: 8px 0 0 3px;
-		font-family: "FontAwesome";
-		-webkit-user-select: none;
-		-moz-user-select: none;
-		-ms-user-select: none;
-		user-select: none;
+		padding: 0;
+		// -webkit-appearance: none;
+		-webkit-appearance: inherit;
+		// appearance: none;
 	}
 
 	.selct {
