--- a/src/assets/scss/pages/_interview.scss
+++ b/src/assets/scss/pages/_interview.scss
@@ -1020,7 +1020,7 @@
 				}
 				@include is-sp {
 					flex-direction: column;
-					height: 130px;
+					height: 155px;
 					width: 100%;
 					justify-content: space-between;
 				}
